--- a/Predict_the_Introverts_from_the_Extroverts.ipynb
+++ b/Predict_the_Introverts_from_the_Extroverts.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "id": "ygNhfZ-NflLw"
       },
@@ -41,7 +41,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "id": "RIy63SugfrKa"
       },
@@ -53,7 +53,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -403,7 +403,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -747,7 +747,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1111,7 +1111,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "metadata": {
         "id": "pFvHGznEflL0",
         "colab": {
@@ -1150,7 +1150,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1199,7 +1199,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1237,7 +1237,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1286,7 +1286,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "metadata": {
         "id": "531L-96XflL1"
       },
@@ -1328,7 +1328,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1375,7 +1375,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1726,7 +1726,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": null,
       "metadata": {
         "id": "iF4Uy8I7flL2"
       },
@@ -1738,7 +1738,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1776,7 +1776,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1805,7 +1805,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1870,7 +1870,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1907,7 +1907,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1953,7 +1953,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1999,7 +1999,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2046,7 +2046,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2084,7 +2084,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2115,7 +2115,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": null,
       "metadata": {
         "id": "MlBf-nzdflL5"
       },
@@ -2127,7 +2127,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2162,7 +2162,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2577,7 +2577,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2619,7 +2619,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": null,
       "metadata": {
         "id": "etoksnIfflL6"
       },
@@ -2837,7 +2837,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2886,7 +2886,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": null,
       "metadata": {
         "id": "IMf70MnJflL7"
       },
@@ -2912,7 +2912,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -3307,7 +3307,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -3353,7 +3353,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": null,
       "metadata": {
         "id": "97r1w2-4flL9"
       },
@@ -3371,7 +3371,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": null,
       "metadata": {
         "id": "N1M4--okflL9"
       },
@@ -3410,7 +3410,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3468,7 +3468,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": null,
       "metadata": {
         "id": "d5dAasnqzMC1"
       },
@@ -3481,7 +3481,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -3570,7 +3570,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3637,7 +3637,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3682,7 +3682,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3735,7 +3735,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3865,7 +3865,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": null,
       "metadata": {
         "id": "LKqTowS0flL9"
       },
@@ -3886,7 +3886,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": null,
       "metadata": {
         "id": "-z1INFcyflL9",
         "colab": {
@@ -4290,7 +4290,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 80,
+      "execution_count": null,
       "metadata": {
         "id": "566b71e1",
         "colab": {
@@ -4412,7 +4412,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 82,
+      "execution_count": null,
       "metadata": {
         "id": "22619708",
         "colab": {
@@ -4462,23 +4462,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "141eaf54"
-      },
-      "source": [
-        "# Task\n",
-        "Explore other model architectures, fine-tune the current model, visualize the predictions, and compare model performance to improve the classification results."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "24eb133d"
       },
       "source": [
-        "### Explore other model architectures\n",
-        "\n",
-        "### Subtask:\n",
-        "Try different neural network architectures (e.g., adding more layers, changing activation functions, using different optimizers) or other advanced machine learning models."
+        "Try different neural network architectures ( adding more layers, changing activation functions, using different optimizers) or other advanced machine learning models."
       ]
     },
     {
@@ -4487,13 +4474,12 @@
         "id": "dd33a3de"
       },
       "source": [
-        "**Reasoning**:\n",
         "Define, compile, train, and evaluate a new neural network model with a different architecture and optimizer to explore alternative models."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "execution_count": null,
       "metadata": {
         "id": "371499db",
         "colab": {
@@ -4651,7 +4637,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 84,
+      "execution_count": null,
       "metadata": {
         "id": "3d89710b",
         "colab": {
@@ -4697,7 +4683,6 @@
         "id": "d920ca8d"
       },
       "source": [
-        "# Task\n",
         "Improve the model's performance (currently 0.94) by using clustering for imputation instead of IterativeImputer, apply advanced feature engineering, train and evaluate the model, and compare the results to determine if clustering-based imputation improves the score."
       ]
     },
@@ -4707,10 +4692,7 @@
         "id": "7202b523"
       },
       "source": [
-        "## Implement clustering for imputation\n",
-        "\n",
-        "### Subtask:\n",
-        "Use a clustering algorithm (e.g., K-Means) to group similar data points and impute missing values within each cluster.\n"
+        "Use a clustering algorithm (K-Means) to group similar data points and impute missing values within each cluster.\n"
       ]
     },
     {
@@ -4719,14 +4701,13 @@
         "id": "cab4c086"
       },
       "source": [
-        "**Reasoning**:\n",
         "Identify columns with missing values and select features for clustering. Then, apply K-Means clustering to the selected features of the training data.\n",
         "\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": null,
       "metadata": {
         "id": "34334dae",
         "colab": {
@@ -5494,14 +5475,13 @@
         "id": "49341ac0"
       },
       "source": [
-        "**Reasoning**:\n",
         "Calculate cluster-specific means for imputation and impute missing values in both train and test dataframes based on their assigned clusters.\n",
         "\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 86,
+      "execution_count": null,
       "metadata": {
         "id": "X6uXXQsIEuKM",
         "colab": {
@@ -6312,7 +6292,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 87,
+      "execution_count": null,
       "metadata": {
         "id": "lYqJfNgDE6UW",
         "colab": {
@@ -6380,9 +6360,6 @@
         "id": "b66457b7"
       },
       "source": [
-        "## Train and evaluate model\n",
-        "\n",
-        "### Subtask:\n",
         "Train the chosen classification model (e.g., XGBoost or a neural network) on the data imputed with clustering and evaluate its performance.\n"
       ]
     },
@@ -6392,25 +6369,13 @@
         "id": "67c3c778"
       },
       "source": [
-        "**Reasoning**:\n",
         "Define the feature columns, separate features and target, initialize and train an XGBoost classifier, prepare the test data, make predictions, and evaluate the model.\n",
         "\n"
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "169a513e"
-      },
-      "source": [
-        "**Reasoning**:\n",
-        "The error indicates that `y_test` and `y_pred_clustered` have different numbers of samples, which is required for calculating accuracy and other metrics. This is likely because `y_test` was taken from the split of the original `train_imputer_df`, while `y_pred_clustered` is a prediction on the entire `test_engineered_clustered` dataset. I need to use the original `test_imputer_df` or `test_engineered_clustered` to create the submission file, but the evaluation should be done on a held-out test set from the training data. I made a mistake by evaluating on the entire test dataset. I should split the training data (`train_engineered_clustered`) into training and validation sets and evaluate on the validation set.\n",
-        "\n"
-      ]
-    },
-    {
       "cell_type": "code",
-      "execution_count": 88,
+      "execution_count": null,
       "metadata": {
         "id": "NV_8ynbabYua"
       },
@@ -6423,7 +6388,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 89,
+      "execution_count": null,
       "metadata": {
         "id": "wI8fsQmEFJ4v",
         "colab": {
@@ -6837,21 +6802,7 @@
         "id": "1be1b9ad"
       },
       "source": [
-        "## Compare results\n",
-        "\n",
-        "### Subtask:\n",
         "Compare the performance of the model trained on clustering-imputed data with the performance of models trained on data imputed with the previous method (IterativeImputer).\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "e79f904b"
-      },
-      "source": [
-        "**Reasoning**:\n",
-        "Recall and display the performance metrics from the previous models and the current model trained on clustering-imputed data for comparison.\n",
-        "\n"
       ]
     },
     {
@@ -6860,8 +6811,6 @@
         "id": "e17bcc7a"
       },
       "source": [
-        "## Summary:\n",
-        "\n",
         "### Data Analysis Key Findings\n",
         "\n",
         "*   The XGBoost model trained on data imputed using the clustering approach achieved an accuracy of 0.9690 on the validation set.\n",
@@ -6869,7 +6818,7 @@
         "*   The initial XGBoost model trained with IterativeImputer achieved an accuracy of 0.9690 on its test set, with a precision of 0.95, recall of 0.93, and an f1-score of 0.94 for class 1.\n",
         "*   Comparing the performance metrics, the clustering-based imputation method did not show a noticeable improvement over the IterativeImputer method for the XGBoost model on this dataset.\n",
         "\n",
-        "### Insights or Next Steps\n",
+        "### Next Steps\n",
         "\n",
         "*   Clustering-based imputation did not improve the model performance in this case. The current performance of around 0.97 accuracy seems to be near the potential limit for this dataset and feature set with the models tested.\n",
         "*   Further efforts to improve performance might need to explore different models, more advanced feature engineering techniques beyond the current set, or potentially collecting more data.\n"
@@ -6877,7 +6826,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 90,
+      "execution_count": null,
       "metadata": {
         "id": "pmdURlL0VI51",
         "colab": {
@@ -6936,7 +6885,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 96,
+      "execution_count": null,
       "metadata": {
         "id": "XQG_hRTkUze8",
         "colab": {
@@ -7059,7 +7008,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 92,
+      "execution_count": null,
       "metadata": {
         "id": "B2ux2wAJckQH",
         "colab": {
@@ -7482,7 +7431,7 @@
         "imbalance_ratio = train_df_imputed_cluster['Personality'].value_counts()[0] / train_df_imputed_cluster['Personality'].value_counts()[1]\n",
         "print(f\"\\nImbalance Ratio (Extrovert / Introvert): {imbalance_ratio:.2f}\")"
       ],
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7540,7 +7489,7 @@
         "print(\"\\nClass distribution within each cluster:\")\n",
         "print(train_engineered_clustered.groupby('Oversampling_Cluster')['Personality'].value_counts().unstack().fillna(0))"
       ],
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8033,7 +7982,7 @@
         "# Note: A more sophisticated approach might balance against the majority class in each cluster,\n",
         "# but oversampling to a fixed number (like max minority count) is a simpler starting point."
       ],
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8094,7 +8043,7 @@
         "print(\"\\nClass distribution in the balanced training data:\")\n",
         "print(train_balanced_clustered['Personality'].value_counts())"
       ],
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8209,7 +8158,7 @@
         "# Note: Direct comparison of classification reports needs careful consideration if evaluated on different test sets.\n",
         "# The most important comparison is the Kaggle score on the hidden test set."
       ],
-      "execution_count": 101,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
